# dfloader

./: LICENSE.txt  README.md  pyproject.toml
dfloader/: __about__.py  __init__.py
tests/: __init__.py
